Fix hover style of icon button bleeding into child components (#5)
* Fix hover style of icon button bleeding into child components

* v0.0.11

--- a/src/button/button.scss
+++ b/src/button/button.scss
@@ -35,9 +35,10 @@ aside nav.lotta-navbar ul {
     padding: 0.4em;
 }
 
-.lotta-button.only-icon
-    :not(.lotta-button-group .lotta-button)
-    :not(.lotta-button.variant__fill)
-    :hover {
+.lotta-button.only-icon {
+    &:not(.lotta-button-group .lotta-button):not(.lotta-button.variant__fill) {
+        &:hover {
     background-color: rgba(var(--lotta-primary-color), 0.2);
+        }
+    }
 }
